--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,16 +24,18 @@
   <%# menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 %>
     <ul class="menu menu-horizontal dropdown-content bg-base-100 rounded-box px-1">
       <% if user_signed_in? %>
-        <li tabindex="0">
-          <a>
+        <li>
+        <details>
+          <summary>
             <%= "#{current_user.email}" %>
-            <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/></svg>
-          </a>
-          <ul class="p-2 bg-base-300">
+          </summary>
+          <ul class="p-2 bg-base-100 rounded-t-none">
             <li><%= link_to 'Settings', edit_user_registration_path %></li>
             <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %></li>
           </ul>
-        </li>
+        </details>
+      </li>
+        </details>
       <% else %>
         <li><%= link_to 'Login', new_user_session_path %></li>
         <li><%= link_to 'Register', new_user_registration_path %></li>
