--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,44 +1,64 @@
 <div class="navbar bg-base-100">
   <div class="navbar-start">
     <div class="dropdown">
-      <label tabindex="0" class="btn btn-ghost lg:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-      </label>
-      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><%= link_to 'Test url', 'portfolios_url' %></li>
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h8m-8 6h16" />
+        </svg>
+      </div>
+      <ul tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+        <li><%= link_to 'Test link', 'test_url', class: "#{active_class?('test_url')}" %></li>
       </ul>
     </div>
     <%= link_to 'SoloCustomerTemplate', root_path, class: 'btn btn-ghost normal-case text-xl'%>
-    <label class="flex cursor-pointer gap-2">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
-      <input type="checkbox" value="light" class="toggle theme-controller"/>
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-    </label>
+
+    <% if user_signed_in? %>
+      <% if current_user.settings['theme'] == 'light' %>
+        <%= link_to settings_path(settings: { theme: 'dark' }), method: :patch, data: { turbo_method: :patch }, class: 'btn btn-ghost' do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+        <% end %>
+      <% else %>
+        <%= link_to settings_path(settings: { theme: 'light' }), method: :patch, data: { turbo_method: :patch }, class: 'btn btn-ghost' do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
+        <% end %>
+      <% end %>
+    <% end %>
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
-      <li><%= link_to 'Test url', 'portfolios_url' %></li>
+      <li><%= link_to 'Test link', 'test_url', class: "#{active_class?('test_url')}" %></li>
     </ul>
   </div>
   <div class="navbar-end">
-  <%# menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 %>
-    <ul class="menu menu-horizontal dropdown-content bg-base-100 rounded-box px-1">
+    <ul class="menu menu-horizontal bg-base-100 rounded-box px-1">
       <% if user_signed_in? %>
         <li>
-        <details>
-          <summary>
-            <%= "#{current_user.email}" %>
-          </summary>
-          <ul class="p-2 bg-base-100 rounded-t-none">
-            <li><%= link_to 'Settings', edit_user_registration_path %></li>
-            <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %></li>
-          </ul>
-        </details>
-      </li>
-        </details>
+          <details>
+            <summary>
+              <%= "#{current_user.email}" %>
+              <% if current_user.admin? %>
+                <span class='tooltip tooltip-bottom' data-tip="You're an admin, Harry!">⭐️</span>
+              <% end %>
+            </summary>
+            <ul class="p-2 bg-base-100 rounded-t-none z-10">
+              <li><%= link_to 'Account', edit_user_registration_path %></li>
+              <%# <li><%= link_to 'Settings', settings_path </li> %>
+              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %></li>
+            </ul>
+          </details>
+        </li>
       <% else %>
         <li><%= link_to 'Login', new_user_session_path %></li>
-        <li><%= link_to 'Register', new_user_registration_path %></li>
       <% end %>
     </ul>
   </div>
