--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     <div class='container mx-auto'>
       <%= render 'shared/navbar' %>
       <%= render 'shared/flash' %>
-      <%= yield %>
+      <div class="flex flex-row gap-5 w-full px-5">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
