Update theme to use try instead of []

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
     <%= link_to 'SoloCustomerTemplate', root_path, class: 'btn btn-ghost normal-case text-xl'%>
 
     <% if user_signed_in? %>
-      <% if current_user.settings['theme'] == 'light' %>
+      <% if current_user.settings.try(:[], 'theme') == 'light' %>
         <%= link_to settings_path(settings: { theme: 'dark' }), method: :patch, data: { turbo_method: :patch }, class: 'btn btn-ghost' do %>
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
         <% end %>
