--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Resend unlock instructions</h2>
+<div class="hero min-h-content bg-base-200">
+  <div class="hero-content flex-col lg:flex-row-reverse w-full my-10">
+    <div class="text-center lg:text-left">
+      <h1 class="text-5xl font-bold">Resend unlock instructions</h1>
+      <p class="py-6">Enter your email to receive unlock instructions</p>
+    </div>
+    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100 px-5 py-5">
+      <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }, class: 'form-body') do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <fieldset class="fieldset">
+          <%= f.label :email, class: 'label' do %>
+            <span class="label-text">Email</span>
+          <% end %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input input-bordered w-full' %>
+        </fieldset>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <fieldset class="fieldset mt-6">
+          <%= f.submit "Resend unlock instructions", class: 'btn btn-primary w-full' %>
+        </fieldset>
+
+        <%= render "devise/shared/links" %>
+      <% end %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
